<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:minWidth="@dimen/popup_width"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/rolagem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clipToPadding="false"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <livroandroid.lib.view.RoundedImageView
                    android:id="@+id/iv_foto"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/aluno" />

                <com.rey.material.widget.TextView
                    android:id="@+id/tv_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descricao"
                    android:textColor="@color/black"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:gravity="center"/>

                <com.rey.material.widget.TextView
                    android:id="@+id/tv_atividade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atividades"
                    android:textColor="@color/accent"
                    android:gravity="center_vertical" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider"/>

                <LinearLayout
                    android:id="@+id/ln_atividades"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical" >
                </LinearLayout>

                <com.rey.material.widget.TextView
                    android:id="@+id/tv_notas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notas"
                    android:textColor="@color/accent"
                    android:gravity="center_vertical" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider"/>

                <LinearLayout
                    android:id="@+id/ln_notas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical" >
                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

</LinearLayout>

