<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:minWidth="@dimen/popup_width"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/rolagem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:clipToPadding="false"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.rey.material.widget.EditText
                    android:id="@+id/edt_nota"
                    style="@style/LightEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nota da avaliação"
                    android:inputType="numberDecimal"
                    app:et_inputId="@+id/textfield_et_char_counter_input"
                    app:et_supportMode="helper" />

                <com.rey.material.widget.EditText
                    android:id="@+id/edt_ponto_extra"
                    style="@style/LightEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Pontos das atividades"
                    android:inputType="numberDecimal"
                    app:et_inputId="@+id/textfield_et_char_counter_input"
                    app:et_supportMode="helper"
                    android:visibility="gone"/>

                <com.rey.material.widget.EditText
                    android:id="@+id/edt_descricao"
                    style="@style/LightEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Observação"
                    android:inputType="textMultiLine"
                    app:et_inputId="@+id/textfield_et_char_counter_input"
                    app:et_supportMode="helper" />

                <com.rey.material.widget.TextView
                    android:id="@+id/tv_atividade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atividades"
                    android:drawableLeft="@drawable/ic_help_circle"
                    android:drawablePadding="7dp"
                    android:textColor="@color/accent"
                    android:gravity="center_vertical" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider"/>

                <LinearLayout
                    android:id="@+id/ln_atividades"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical" >
                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rolagem"
        android:gravity="bottom|right"
        android:orientation="horizontal">

        <com.rey.material.widget.Button
            android:id="@+id/btn_cancelar"
            style="@style/BtnColorNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:layout_marginRight="5dp"
            android:background="@android:color/white"
            android:text="@string/cancelar"
            android:textColor="@color/accent"
            app:rd_enable="true" />

        <com.rey.material.widget.Button
            android:id="@+id/btn_editar"
            style="@style/BtnColorNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:background="@android:color/white"
            android:text="@string/salvar"
            android:textColor="@color/accent"
            app:rd_enable="true" />

    </LinearLayout>


</LinearLayout>

